Update compose func

--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1786,19 +1786,17 @@
        (add-hook 'emacs-startup-hook  (lambda ()
                                         (my:imapnotify-start-prodigy-services)
                                         (mu4e)))
-       (setq mu4e-compose-signature-auto-include nil)
-       (defun message-insert-signature-at-point (pmode)
-         "Function to insert signature at point."
-         (when pmode (mu4e-compose-goto-top))
-         (interactive)
-         (require 'message)
-         (message-goto-body)
-         (save-restriction
-           (narrow-to-region (point) (point))
-           (message-insert-signature))
-         (mu4e-compose-goto-top))
-       (add-hook 'mu4e-compose-mode-hook (lambda () (message-insert-signature-at-point nil)) t)
-       (add-hook 'mu4e-compose-pre-hook (lambda () (message-insert-signature-at-point t)) t)
+       (setq message-cite-reply-position 'bellow)
+       ;; (defun message-insert-signature-at-point ()
+       ;;   "Function to insert signature at point."
+       ;;   (interactive)
+       ;;   (message-goto-body)
+       ;;   (save-restriction
+       ;;     (narrow-to-region (point) (point))
+       ;;     (message-insert-signature))
+       ;;   (message-goto-body))
+       ;; (add-hook 'mu4e-compose-mode-hook (lambda () (message-insert-signature-at-point)) t)
+       ;; (add-hook 'mu4e-compose-pre-hook (lambda () (message-insert-signature-at-point t)) t)
        (add-hook 'mu4e-compose-mode-hook (lambda ()
                                            (use-hard-newlines -1)
                                            (turn-off-auto-fill))))
