--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -653,16 +653,7 @@
         (cl-nsubstitute-if
          '(consult-ripgrep "Find regexp")
          (pcase-lambda (`(,cmd _)) (eq cmd #'project-find-regexp))
-         project-switch-commands)
-        (consult-customize
-         consult-theme :preview-key '(:debounce 0.2 any)
-         consult-ripgrep consult-git-grep consult-grep
-         consult-bookmark consult-xref consult-recent-file
-         consult--source-bookmark consult--source-file-register
-         consult--source-project-recent-file
-         ;; :preview-key "M-."
-         :preview-key '(:debounce 0.4 any)
-         consult--source-recent-file :preview-key nil))
+         project-switch-commands))
     #+end_src
 *** marginalia
     #+begin_src emacs-lisp
@@ -918,14 +909,15 @@
     #+end_src
 *** tree-sitter
     #+begin_src emacs-lisp
-      (use-package treesit-auto
-        :ensure t
-        :custom
-        (treesit-font-lock-level 3)
-        (treesit-auto-install 'prompt)
-        :config
-        (treesit-auto-add-to-auto-mode-alist 'all)
-        (global-treesit-auto-mode))
+      ;; (use-package treesit-auto
+      ;;   :ensure t
+      ;;   :custom
+      ;;   (treesit-font-lock-level 3)
+      ;;   (treesit-auto-install 'prompt)
+      ;;   :config
+      ;;   ;; (treesit-auto-add-to-auto-mode-alist 'all)
+      ;;   (treesit-auto-add-to-auto-mode-alist '(rust python toml json yaml))
+      ;;   (global-treesit-auto-mode))
     #+end_src
 *** git
     #+begin_src emacs-lisp
