--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -802,10 +802,14 @@
    #+end_src
 * Garbage collection
   #+begin_src emacs-lisp
+    (setq gc-cons-threshold most-positive-fixnum)
+    (add-hook 'emacs-startup-hook
+              (lambda ()
+                (setq gc-cons-threshold (* 124 1024 1024))))
+
     (setq gc-cons-percentage 0.2
-          gc-cons-threshold (* 1024 1024 1024)
           garbage-collection-messages t)
-    (add-hook 'focus-out-hook #'garbage-collect)
+    (run-with-idle-timer 60 t #'garbage-collect)
   #+end_src
 * LSP
 ** eglot
