--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1779,7 +1779,7 @@
        (setq message-citation-line-function 'message-insert-formatted-citation-line)
        (setq mu4e-headers-include-related nil)
        (setq mu4e-context-policy 'pick-first)
-       (setq mu4e-compose-context-policy 'always-ask)
+       (setq mu4e-compose-context-policy 'ask-if-none)
        ;; https://github.com/djcb/mu/issues/1136#issuecomment-1229005006
        (setf (plist-get (alist-get 'trash mu4e-marks) :action)
              (lambda (docid msg target)
