Enable magit icons

--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -327,6 +327,17 @@
        :after corfu
        :config
        (add-to-list 'corfu-margin-formatters #'nerd-icons-corfu-formatter))
+
+     (use-package magit-file-icons
+       :ensure t
+       :after magit
+       :init
+       (magit-file-icons-mode 1)
+       :custom
+       ;; These are the default values:
+       (magit-file-icons-enable-diff-file-section-icons t)
+       (magit-file-icons-enable-untracked-icons t)
+       (magit-file-icons-enable-diffstat-icons t))
    #+end_src
 ** Highlight-indent-guide
    #+begin_src emacs-lisp
